@@ -129,4 +129,5 @@
         </div>
     </div>
 </body>
+<script src="tabs.js" defer></script>
 </html>
