@@ -1,3 +1,4 @@
 - En algún lado hay que incluir un div con una introducción al centro de estudiantes, con un link a su propia página.
 - Queda pendiente el relevamiento en las áreas de mecánica y electricidad para ver cómo se van a producir sus páginas
 - El logo de la escuela tiene fondo blanco ayuda
+- Hay que cambiar la informacion del plan de estudio, el perfil tecnico en computacion y alguna data mas.
