@@ -184,3 +184,115 @@
         padding: 1.5rem 1rem;
     }
 }
+/* --- Media Query para Responsive en móviles --- */
+@media (max-width: 768px) {
+    .main-content-wrapper {
+        /* Se apilan verticalmente (comportamiento natural de flex-wrap) */
+        padding: 0.5rem;
+    }
+
+    .main-column, .sidebar-column {
+        /* Ocupan todo el ancho en móviles */
+        flex: 1 1 100%;
+    }
+
+    .content-section {
+        padding: 1.5rem 1rem;
+    }
+    .tabs-container {
+        flex-direction: column;
+    }
+
+    .tabs-nav {
+        flex-direction: row; /* Botones uno al lado del otro */
+        overflow-x: auto; /* Permitir scroll horizontal si no caben */
+        padding-bottom: 0.5rem;
+        gap: 0.75rem;
+    }
+
+    .tabs-nav-button {
+        white-space: nowrap; /* Evita que el texto del botón se parta */
+    }
+}
+
+/* ============================================== */
+/* === NUEVO: ESTILOS PARA EL SISTEMA DE PESTAÑAS (TABS) === */
+/* ============================================== */
+
+/* Contenedor principal de las pestañas, creado por JS */
+.tabs-container {
+    display: flex;
+    flex-wrap: wrap; /* Para responsive */
+    gap: 1.5rem; /* Espacio entre nav y contenido */
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+/* 1. Barra de navegación izquierda (los botones) */
+.tabs-nav {
+    flex: 1; /* Ocupa 1 parte */
+    min-width: 200px; /* Ancho mínimo */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.tabs-nav-button {
+    display: flex;
+    align-items: center; /* Centra el texto verticalmente */
+    width: 100%;
+    padding: 0.85rem 1.25rem;
+    border: 1px solid #e0e0e0;
+    background-color: #f8f8f8;
+    color: #333;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.95rem;
+    font-weight: 500;
+    text-align: left;
+    transition: all 0.2s ease-in-out;
+    line-height: 1.4;
+}
+
+.tabs-nav-button:hover {
+    background-color: #f0f0f0;
+    color: #000;
+}
+
+/* Estilo del botón ACTIVO (como en tu imagen) */
+.tabs-nav-button.active {
+    background-color: #0056b3; /* Color primario */
+    color: #ffffff;
+    border-color: #0056b3;
+    box-shadow: 0 4px 8px rgba(0, 86, 179, 0.2);
+}
+
+/* 2. Área de contenido derecha */
+.tabs-content {
+    flex: 3; /* Ocupa 3 partes */
+    min-width: 300px; /* Ancho mínimo */
+}
+
+/* 3. Paneles de contenido (los .content-section originales) */
+.tabs-pane {
+    display: none; /* Ocultos por defecto */
+    /* Mantenemos los estilos de .content-section */
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    /* El padding que estaba en .content-section ahora va aquí */
+    padding: 1.5rem 2rem;
+}
+
+/* Panel ACTIVO (el que se debe mostrar) */
+.tabs-pane.active {
+    display: block;
+    animation: fadeIn 0.4s ease;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
